@@ -180,6 +180,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
           <groups>none()</groups>
         </configuration>
       </plugin>
